--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.2",
     "styled-components": "^6.1.19",
+    "sweetalert2": "^11.26.10",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
